[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py310"]
exclude = '''
(
  /venv
  | /.venv
  | /artifacts
  | /data
  | /notebooks
  | /__pycache__
  | /mlruns
  | /.streamlit
)
'''

[tool.isort]
profile = "black"
line_length = 88
skip = [
  "venv",
  ".venv",
  "artifacts",
  "data",
  "notebooks",
  "__pycache__",
  "mlruns",
  ".streamlit",
]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
  "venv",
  ".venv",
  "artifacts",
  "data",
  "notebooks",
  "__pycache__",
  "mlruns",
  ".streamlit",
]
